--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-playwright-ct",
+  "name": "react-ui-testing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,8 +8,9 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "test:install": "playwright install chromium --no-shell",
-    "test": "npm run test:components",
-    "test:components": "playwright test -c playwright-ct.config.ts --project=chromium"
+    "test:playwright": "playwright test -c playwright-ct.config.ts --project=chromium",
+    "test:vitest": "vitest --run --workspace=vitest.workspace.ts",
+    "test:vitest:watch": "vitest --workspace=vitest.workspace.ts"
   },
   "dependencies": {
     "clsx": "2.1.1",
@@ -24,7 +25,11 @@
     "@vanilla-extract/css": "1.17.1",
     "@vanilla-extract/vite-plugin": "5.0.1",
     "@vitejs/plugin-react": "4.3.4",
+    "@vitest/browser": "3.0.9",
+    "playwright": "1.51.1",
     "typescript": "5.8.2",
-    "vite": "6.2.3"
+    "vite": "6.2.3",
+    "vitest": "3.0.9",
+    "vitest-browser-react": "0.1.1"
   }
 }
