--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,9 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+    "types": ["@vitest/browser/matchers", "@vitest/browser/providers/playwright"]
+
 	},
 	"include": ["src"]
 }
