--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,8 @@ on:
     branches: [ main, master ]
 jobs:
   changes:
+    permissions:
+      contents: read
     timeout-minutes: 60
     runs-on: ubuntu-latest
     outputs:
