--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,14 +6,13 @@ on:
     branches: [ main, master ]
 jobs:
   changes:
-    permissions:
-      contents: read
     timeout-minutes: 60
     runs-on: ubuntu-latest
     outputs:
       runtime: ${{ steps.filter.outputs.runtime }}
     steps:
-    # For pull requests it's not necessary to checkout the code
+    - name: Checkout repository
+      uses: actions/checkout@v4
     - name: Get changed files
       uses: dorny/paths-filter@v3
       id: filter
