chore: set predicate-quantifier: every

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,7 @@ jobs:
       uses: dorny/paths-filter@v3
       id: filter
       with:
+        predicate-quantifier: 'every'
         filters: |
           runtime:
             - 'src/**'
