--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,6 +22,7 @@ jobs:
           filters: |
             runtime:
               - 'src/**'
+              - 'package-lock.json'
               - '!**/*.md'
               - '!**/playwright/**'
               - '!**/.github/**'
