--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,7 @@ on:
     branches: [main, master]
 jobs:
   changes:
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     name: Detect changes
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -29,7 +30,7 @@ jobs:
 
   test:
     needs: changes
-    if: ${{ needs.changes.outputs.test-ui == 'true' }}
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && needs.changes.outputs.test-ui == 'true' }}
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
