--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,8 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+env:
+  CI: true
 jobs:
   changes:
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
@@ -46,6 +48,9 @@ jobs:
               - 'src/**'
               - '!**/*.md'
               - '!**/playwright/**'
+      - name: Set path to Chromium binary
+        if: ${{ needs.changes.outputs.test-ui == 'true' }}
+        run: echo "CHROMIUM_BIN=$(which chromium-browser)" >> $GITHUB_ENV
       - name: Run Playwright tests
         if: ${{ steps.filter.outputs.test-ui == 'true' }}
         run: npm run test:playwright
