--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,7 +8,7 @@ env:
   CI: true
 jobs:
   changes:
-    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
+    if: ${{ !contains(github.event.head_commit.message, '[skip test]') }}
     name: Detect changes
     timeout-minutes: 60
     runs-on: ubuntu-latest
