--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run Vitest
-        run: npm run test:vitest
+        run: npm run test:vitest -- --reporter=html --outputFile=./vitest-report/index.html
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: vitest-report
+          path: vitest-report/
+          retention-days: 30
 
   build:
     name: Build
