--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vanilla-extract/vite-plugin": "5.0.1",
     "@vitejs/plugin-react": "4.4.1",
     "@vitest/browser": "3.1.2",
+    "@vitest/ui": "3.1.2",
     "playwright": "1.52.0",
     "typescript": "5.8.3",
     "vite": "npm:rolldown-vite@latest",
