--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test:install": "playwright install chromium --no-shell",
     "test:playwright": "playwright test -c playwright-ct.config.ts --project=chromium",
@@ -13,23 +13,23 @@
     "test:vitest:watch": "vitest --workspace=vitest.workspace.ts"
   },
   "dependencies": {
+    "@vanilla-extract/css": "1.17.1",
+    "@vanilla-extract/vite-plugin": "5.0.1",
+    "@vitejs/plugin-react": "4.4.1",
     "clsx": "2.1.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "typescript": "5.8.3",
+    "vite": "npm:rolldown-vite@latest"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "1.52.0",
     "@types/node": "22.15.2",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
-    "@vanilla-extract/css": "1.17.1",
-    "@vanilla-extract/vite-plugin": "5.0.1",
-    "@vitejs/plugin-react": "4.4.1",
     "@vitest/browser": "3.1.2",
     "@vitest/ui": "3.1.2",
     "playwright": "1.52.0",
-    "typescript": "5.8.3",
-    "vite": "npm:rolldown-vite@latest",
     "vitest": "3.1.2",
     "vitest-browser-react": "0.1.1"
   },
