--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,9 +26,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true,
-    "types": ["@vitest/browser/matchers", "@vitest/browser/providers/playwright"]
-
+		"noUncheckedSideEffectImports": true
 	},
 	"include": ["src"]
 }
