--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,6 @@ jobs:
           cache: 'npm'
           node-version: lts/*
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --omit=dev
       - name: Build
         run: npm run build
