--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           cache: 'npm'
           node-version: lts/*
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Run Playwright tests
         run: npm run test:playwright
       - uses: actions/upload-artifact@v4
@@ -76,7 +76,7 @@ jobs:
           cache: 'npm'
           node-version: lts/*
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Run Vitest
         run: npm run test:vitest -- --reporter=html --outputFile=./vitest-report/index.html
       - uses: actions/upload-artifact@v4
@@ -98,6 +98,6 @@ jobs:
           cache: 'npm'
           node-version: lts/*
       - name: Install dependencies
-        run: npm ci --omit=dev
+        run: npm i --omit=dev
       - name: Build
         run: npm run build
